# friendly-broccoli-discord

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/systemd/: telegram-relay.service
scripts/: relayctl.sh
src/goob_ai/: __init__.py  config.py  discord_sender.py  main.py  telegram_listener.py  translator.py
tests/: __init__.py  test_config_and_discord.py
